<resources>
    <string name="app_name">Dealz</string>
    <string name="sign_in">Sign-In</string>
    <string name="update_profile">Update Profile</string>
    <string name="profile">Profile</string>
    <string name="top_dealz">Top Dealz</string>
    <string name="results">Results</string>

    <string name="menu_pay_this_seller_only">Pay this Seller only</string>
    <string name="menu_help">Help</string>
    <string name="contact_seller">Contact Seller</string>
    <string name="create_invoice">Create Invoice</string>

    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_inbox">Inbox</string>
    <string name="navigation_drawer_cart">Shopping Cart</string>
    <string name="navigation_drawer_edit">Edit</string>
    <string name="navigation_drawer_store">Store</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
