<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<group android:checkableBehavior="single">-->
        <!--<item-->
            <!--android:id="@+id/nav_camera"-->
            <!--android:icon="@drawable/ic_menu_camera"-->
            <!--android:title="Import" />-->
        <!--<item-->
            <!--android:id="@+id/nav_gallery"-->
            <!--android:icon="@drawable/ic_menu_gallery"-->
            <!--android:title="Gallery" />-->
        <!--<item-->
            <!--android:id="@+id/nav_slideshow"-->
            <!--android:icon="@drawable/ic_menu_slideshow"-->
            <!--android:title="Slideshow" />-->
        <!--<item-->
            <!--android:id="@+id/nav_manage"-->
            <!--android:icon="@drawable/ic_menu_manage"-->
            <!--android:title="Tools" />-->
    <!--</group>-->

    <item android:title="@string/profile">
        <menu>
            <item
                android:id="@+id/nav_inbox"
                android:icon="@drawable/ic_forum_black"
                android:title="@string/navigation_drawer_inbox" />
            <item
                android:id="@+id/nav_cart"
                android:icon="@drawable/ic_shopping_cart"
                android:title="@string/navigation_drawer_cart" />
            <item
                android:id="@+id/nav_store"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/navigation_drawer_store" />
            <item
                android:id="@+id/nav_edit"
                android:icon="@drawable/ic_account_circle"
                android:title="@string/navigation_drawer_edit" />
        </menu>
    </item>

</menu>
